Fix home page links being squished

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -70,6 +70,7 @@ nav.site-nav {
 
 .home--page-link {
 	font-size: 24px;
+    padding: 5px 8px;
 }
 
 .grid--item {
